2013-10-18  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.24.0-rc2 Released.

	* Properly copy/remove the device state cache flag over a masquerade.

	  In r378303 the AST_FLAG_DISABLE_DEVSTATE_CACHE flag was added that
	  tells the devstate system to not cache states for non-real devices.
	  However, when optimizing away channels (ast_do_masquerade), that flag
	  wasn't copied.

	  In my case, using Local devices as queue members created a situation
	  where the endpoint was considered in use, but the state change of the
	  device being available again was ignored (not cached). The endpoint
	  channel was optimized into the (previously) Local channel, but kept
	  the do-not-cache flag. The end result being that the queue member
	  apparently stayed in use forever.

2013-09-19  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.24.0-rc1 Released.

2013-09-18 19:54 +0000 [r399402]  Kinsey Moore <kmoore@digium.com>

	* main/abstract_jb.c: Fix jitter buffer log file creation This
	  adjusts '/'-to-'#' replacement to replace all instances of '/'
	  instead of just the first to ensure that the jitter buffer log
	  file gets the correct name as per Richard Kenner's suggestion.
	  (closes issue ASTERISK-21036) Reported by: Richard Kenner

2013-09-18 17:15 +0000 [r399351]  Matthew Jordan <mjordan@digium.com>

	* build_tools/prep_tarball: Update prep_tarball with new
	  documentation files on the Asterisk wiki This will now pull both
	  a command reference for the version being prepared, as well as an
	  Admin Guide that applies to all versions of Asterisk. (issue
	  ASTERISK-22439) Reported by: Olle Johansson

2013-09-18 01:32 +0000 [r399304]  Michael L. Young <elgueromexicano@gmail.com>

	* main/features.c: Fix Segfault When Syntax Of A Line Under
	  [applicationmap] Is Invalid When processing the lines under the
	  [applicationmap] context in features.conf, a segfault occurs from