@@ -1,1 +1,1 @@
-1.8.24.0-rc2
+1.8.24.0
